dev: 环境配置