@@ -9,6 +9,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController @RequestMapping("/api/libraries")
     @CrossOrigin(origins = "*") public class LibraryController {
@@ -37,7 +38,7 @@ import java.util.List;
           }
           return d;
         })
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @PostMapping public ResponseEntity <
